PW-161 Fix horizontal scroll bug on safari

--- a/components/Navbar/navbar.module.scss
+++ b/components/Navbar/navbar.module.scss
@@ -2,8 +2,7 @@
 @import 'styles/mixins/flex';
 
 .root {
-  position: fixed;
-  width: 100%;
+  position: sticky;
   top: 0;
   left: 0;
   z-index: 1500;
